examples/tests/regress1.ma
x := buffer(10)
println(buffer.length)
